# duck-kart

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/models/: kart.glb
assets/shaders/: default.frag.msl  default.vert.msl  shadow.frag.msl  shadow.vert.msl  skybox.frag.msl  skybox.vert.msl  triangle.frag.msl  triangle.vert  triangle.vert.msl  triangle.vert.spv  ui.frag.msl  ui.vert.msl
src/: main.cpp
src/engine/assets/: AssetsManager.cpp  AssetsManager.hpp  GLTFLoader.cpp  GLTFLoader.hpp  LoadedModel.hpp  LoadedModelBatcher.cpp  LoadedModelBatcher.hpp  ModelLoader.hpp
src/engine/core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  SDLContext.cpp  SDLContext.hpp
src/engine/graphics/: Cubemap.hpp  Font.cpp  Font.hpp  GPUTexture.cpp  GPUTexture.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderMesh.cpp  RenderMesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShadowCamera.cpp  ShadowCamera.hpp  ShadowConstants.hpp  ShadowMap.cpp  ShadowMap.hpp  TextTexture.cpp  TextTexture.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexLayout.hpp
src/engine/graphics/renderer/: RenderMesh.cpp  RenderMesh.hpp  RendererGeometry.cpp  RendererGeometry.hpp  RendererResources.cpp  RendererResources.hpp  SceneRenderer.cpp  SceneRenderer.hpp  ShadowRenderer.cpp  ShadowRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
src/engine/graphics/uniforms/: CameraUniforms.hpp  LightUniforms.hpp  MaterialUniforms.hpp  PointLightUniforms.hpp  ShadowLightUniforms.hpp  ShadowVertexUniforms.hpp  VertexUniforms.hpp
src/engine/math/: AABB.hpp  Frustum.cpp  Frustum.hpp  Math.cpp  Math.hpp  Transform.cpp  Transform.hpp
src/engine/physics/: TerrainCollider.cpp  TerrainCollider.hpp
src/engine/scene/: Camera.cpp  Camera.hpp  RenderChunk.hpp  RenderObject.hpp  Scene.hpp  Skybox.hpp
src/engine/settings/: EngineSettings.hpp
src/engine/window/: Window.cpp  Window.hpp
src/engine/world/: World.cpp  World.hpp
src/engine/world/components/: FreeCameraControllerComponent.hpp  TerrainColliderComponent.hpp  ThirdPersonCameraComponent.hpp  TransformComponent.hpp  VehicleMovementComponent.hpp
src/engine/world/systems/: FreeCameraControllerSystem.cpp  FreeCameraControllerSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  ThirdPersonCameraSystem.cpp  ThirdPersonCameraSystem.hpp  VehicleMovementSystem.cpp  VehicleMovementSystem.hpp
src/game/: Game.cpp  Game.hpp
src/game/meshes/: PyramidMesh.cpp  PyramidMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp
src/game/ui/: DebugHud.cpp  DebugHud.hpp
